[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_context = true
pretty = true
show_column_numbers = true
show_error_codes = true
exclude = ['docs/']

[tool.mypy-six.moves]
ignore_missing_imports = true

[tool.poetry]
name = "volttron-lib-modbus-driver"
version = "2.0.0rc0"
description = "Modbus driver supported and maintained by the Volttron team."
authors = ["Mark Bonicillo <volttron@pnnl.gov>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/VOLTTRON/volttron-lib-modbus-driver"
homepage = "https://github.com/VOLTTRON/volttron-lib-modbus-driver"
keywords = []
packages = [ { include = "volttron", from = "src" } ]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry.dependencies]
python = "^3.10"
volttron-lib-base-driver = { path = "../volttron-lib-base-driver", develop = true }
pymodbus = "^3.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
modbus-tk= "^1.1.2"
pyserial = "^3.5"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"
mypy = "^0.942"
coverage = "^6.3.2"
isort = "^5.10.1"

[tool.poetry.group.docs.dependencies]
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]
